--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
-  "python.linting.pylintEnabled": false,
-  "python.linting.pep8Enabled": true,
-  "python.linting.enabled": true,
+  "python.linting.pylintEnabled": true,
+  "python.linting.pep8Enabled": false,
+  "python.linting.enabled": false,
   "python.pythonPath": "/usr/local/bin/python3.7",
   "python.formatting.provider": "autopep8"
 }
