--- a/Pipfile
+++ b/Pipfile
@@ -8,11 +8,11 @@ verify_ssl = true
 [packages]
 wagtail = "<2.6,>=2.5"
 mysqlclient = ">=1.4.2"
-pep8 = "*"
-wagtailmenus = "*"
-django-widget-tweaks = "*"
+pylint = ">=2.3.1"
+wagtailmenus = ">=2.13.1"
+django-widget-tweaks = ">=1.4.5"
 wagtailfontawesome = ">=1.1.3,<1.2"
 Django = ">=2.2,<2.3"
 
 [requires]
-python_version = "3.5"
+python_version = "3.7"
