--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,34 @@
-Django>=2.2,<2.3
-wagtail>=2.5,<2.6
-mysqlclient>=1.4.2
-pep8
-wagtailmenus
-django-widget-tweaks
-wagtailfontawesome>=1.1.3,<1.2
+-i https://pypi.org/simple
+astroid==2.2.5
+beautifulsoup4==4.6.0
+certifi==2019.6.16
+chardet==3.0.4
+django-cogwheels==0.2
+django-modelcluster==4.4
+django-taggit==0.24.0
+django-treebeard==4.3
+django-widget-tweaks==1.4.5
+django==2.2.3
+djangorestframework==3.10.0
+draftjs-exporter==2.1.6
+html5lib==1.0.1
+idna==2.8
+isort==4.3.21
+lazy-object-proxy==1.4.1
+mccabe==0.6.1
+mysqlclient==1.4.2.post1
+pillow==5.4.1
+pylint==2.3.1
+pytz==2019.1
+requests==2.22.0
+six==1.12.0
+sqlparse==0.3.0
+typed-ast==1.4.0 ; implementation_name == 'cpython'
+unidecode==1.1.1
+urllib3==1.25.3
+wagtail==2.5.1
+wagtailfontawesome==1.1.4
+wagtailmenus==2.13.1
+webencodings==0.5.1
+willow==1.1
+wrapt==1.11.2
