--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ wagtailmenus = ">=2.13.1"
 django-widget-tweaks = ">=1.4.5"
 wagtailfontawesome = ">=1.1.3,<1.2"
 Django = ">=2.2,<2.3"
+django-debug-toolbar = "*"
 
 [requires]
 python_version = "3.7"
