--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
-  "python.linting.pylintEnabled": true,
+  "python.linting.pylintEnabled": false,
   "python.linting.pep8Enabled": false,
-  "python.linting.enabled": false,
+  "python.linting.enabled": true,
   "python.pythonPath": "/usr/local/bin/python3.7",
-  "python.formatting.provider": "autopep8"
+  "python.formatting.provider": "autopep8",
+  "python.linting.flake8Enabled": true
 }
